--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fastapi"
+name = "fastapi--app"
 version = "0.1.0"
 description = "fastapi project for assignment 2"
 authors = ["Your Name <you@example.com>"]
@@ -18,6 +18,9 @@ python-pptx = "^1.0.2"
 datasets = "^3.0.0"
 plotly = "^5.24.1"
 streamlit-plotly-events = "^0.0.6"
+uvicorn = "^0.31.0"
+pydantic = "^2.9.2"
+fastapi = "^0.115.0"
 
 
 [build-system]
