--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -19,4 +19,4 @@ COPY  . /app
 EXPOSE 8501
 
 # Run the Streamlit app using Poetry
-CMD ["poetry", "run","python", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "index.py"]
