--- a/streamlit/pyproject.toml
+++ b/streamlit/pyproject.toml
@@ -20,6 +20,8 @@ python-pptx = "^1.0.2"
 datasets = "^3.0.0"
 plotly = "^5.24.1"
 streamlit-plotly-events = "^0.0.6"
+google-cloud-storage = "^2.18.2"
+mysql-connector-python = "^9.0.0"
 
 
 [build-system]
