--- a/streamlit/pyproject.toml
+++ b/streamlit/pyproject.toml
@@ -22,6 +22,7 @@ plotly = "^5.24.1"
 streamlit-plotly-events = "^0.0.6"
 google-cloud-storage = "^2.18.2"
 mysql-connector-python = "^9.0.0"
+pymysql = "^1.1.1"
 
 
 [build-system]
