--- a/streamlit/pyproject.toml
+++ b/streamlit/pyproject.toml
@@ -23,6 +23,7 @@ streamlit-plotly-events = "^0.0.6"
 google-cloud-storage = "^2.18.2"
 mysql-connector-python = "^9.0.0"
 pymysql = "^1.1.1"
+sqlalchemy = "^2.0.35"
 
 
 [build-system]
