--- a/Airflow/docker-compose.yaml
+++ b/Airflow/docker-compose.yaml
@@ -44,6 +44,7 @@
 #
 # Feel free to modify this file to suit your needs.
 ---
+
 x-airflow-common:
   &airflow-common
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
@@ -78,6 +79,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/credentials:/opt/airflow/credentials
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -118,6 +120,10 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: custom_airflow:latest
     command: webserver
     ports:
       - "8080:8080"
@@ -135,6 +141,10 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: custom_airflow:latest
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
@@ -150,6 +160,10 @@ services:
 
   airflow-worker:
     <<: *airflow-common
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: custom_airflow:latest
     command: celery worker
     healthcheck:
       # yamllint disable rule:line-length
