--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -21,6 +21,7 @@ streamlit-plotly-events = "^0.0.6"
 uvicorn = "^0.31.0"
 pydantic = "^2.9.2"
 fastapi = "^0.115.0"
+pymysql = "^1.1.1"
 
 
 [build-system]
