--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -19,9 +19,10 @@ datasets = "^3.0.0"
 plotly = "^5.24.1"
 streamlit-plotly-events = "^0.0.6"
 uvicorn = "^0.31.0"
-pydantic = "^2.9.2"
+pydantic = {version = "^2.9.2", extras = ["email"]}
 fastapi = "^0.115.0"
 pymysql = "^1.1.1"
+bcrypt = "^4.2.0"
 
 
 [build-system]
