--- a/Airflow/docker-compose.yaml
+++ b/Airflow/docker-compose.yaml
@@ -69,7 +69,7 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-pandas streamlit numpy PyPDF2[full]==3.0.1 pytesseract==0.3.13 pdf2image==1.17.0 opencv-python tabula-py azure-ai-formrecognizer==3.2.0}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-pandas streamlit numpy PyPDF2[full]==3.0.1 pytesseract==0.3.13 pdf2image==1.17.0 opencv-python tabula-py azure-ai-formrecognizer==3.2.0 pymysql==1.1.1}
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
