--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -23,6 +23,11 @@ pydantic = {extras = ["email"], version = "^2.9.2"}
 fastapi = "^0.115.0"
 pymysql = "^1.1.1"
 bcrypt = "^4.2.0"
+jwt = "^1.3.1"
+datetime = "^5.5"
+python-multipart = "^0.0.12"
+logging = "^0.4.9.6"
+pyjwt = "^2.9.0"
 
 
 [build-system]
