--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -28,6 +28,8 @@ datetime = "^5.5"
 python-multipart = "^0.0.12"
 logging = "^0.4.9.6"
 pyjwt = "^2.9.0"
+google-cloud = "^0.34.0"
+google-cloud-storage = "^2.18.2"
 
 
 [build-system]
