--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,19 @@ version: '3'
 
 services:
   fastapi-app:
-    build: 
+    build:
       context: ./fastapi
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
 
   streamlit-app:
-    build: 
+    build:
       context: ./streamlit
       dockerfile: Dockerfile
     ports:
       - "8501:8501"
     depends_on:
       - fastapi-app
+    environment:
+      - FASTAPI_URL=http://fastapi-app:8000
