--- a/streamlit/pyproject.toml
+++ b/streamlit/pyproject.toml
@@ -24,6 +24,7 @@ google-cloud-storage = "^2.18.2"
 mysql-connector-python = "^9.0.0"
 pymysql = "^1.1.1"
 sqlalchemy = "^2.0.35"
+pathlib = "^1.0.1"
 
 
 [build-system]
