--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,27 @@ version: '3'
 
 services:
   fastapi-app:
-    build: 
+    build:
       context: ./fastapi
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./credentials:/app/credentials
+      - ./fastapi/credentials:/app/credentials
+    networks:
+      - app-network
 
   streamlit-app:
-    build: 
+    build:
       context: ./streamlit
       dockerfile: Dockerfile
     ports:
       - "8501:8501"
     depends_on:
       - fastapi-app
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
