--- a/fastapi/pyproject.toml
+++ b/fastapi/pyproject.toml
@@ -27,9 +27,10 @@ jwt = "^1.3.1"
 datetime = "^5.5"
 python-multipart = "^0.0.12"
 logging = "^0.4.9.6"
-pyjwt = "^2.9.0"
 google-cloud = "^0.34.0"
 google-cloud-storage = "^2.18.2"
+pyjwt = "^2.9.0"
+pathlib = "^1.0.1"
 
 
 [build-system]
